<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_market_summary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_market_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_total_transaction_fees_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_total_transaction_fee_bitcoin_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_transaction_fees"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_transaction_fees"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_transaction_fees_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_total_transaction_fees_title"
            app:layout_constraintTop_toTopOf="@+id/tv_total_transaction_fees_title"
            tools:text="$51,006.63" />

        <TextView
            android:id="@+id/tv_number_transactions_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_number_transactions_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_number_transactions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_transaction_fees_title" />

        <TextView
            android:id="@+id/tv_number_transactions"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_number_transactions_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_number_transactions_title"
            app:layout_constraintTop_toTopOf="@+id/tv_number_transactions_title"
            tools:text="343,704" />

        <TextView
            android:id="@+id/tv_total_output_volume_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_total_output_volume_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_output_volume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_number_transactions_title" />

        <TextView
            android:id="@+id/tv_total_output_volume"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_output_volume_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_total_output_volume_title"
            app:layout_constraintTop_toTopOf="@+id/tv_total_output_volume_title"
            tools:text="16,406.53000000" />

        <TextView
            android:id="@+id/tv_estimated_transaction_volume_dollar_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_estimated_transaction_volume_bitcoin_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_estimated_transaction_volume_dollar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_output_volume_title" />

        <TextView
            android:id="@+id/tv_estimated_transaction_volume_dollar"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_estimated_transaction_volume_dollar_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_estimated_transaction_volume_dollar_title"
            app:layout_constraintTop_toTopOf="@+id/tv_estimated_transaction_volume_dollar_title"
            tools:text="1,911,600.27348789" />

        <TextView
            android:id="@+id/tv_estimated_transaction_volume_bitcoin_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_estimated_transaction_volume_dollar_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_estimated_transaction_volume_bitcoin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_estimated_transaction_volume_dollar_title" />

        <TextView
            android:id="@+id/tv_estimated_transaction_volume_bitcoin"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_estimated_transaction_volume_bitcoin_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_estimated_transaction_volume_bitcoin_title"
            app:layout_constraintTop_toTopOf="@+id/tv_estimated_transaction_volume_bitcoin_title"
            tools:text="$6,790,514,193.53" />

        <TextView
            android:id="@+id/tv_total_transaction_fees_caption"
            style="@style/BaseText.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/stats_total_transaction_fee_bitcoin_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_estimated_transaction_volume_bitcoin_title" />

        <TextView
            android:id="@+id/tv_total_output_volume_caption"
            style="@style/BaseText.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginVertical="@dimen/spacing_small"
            android:text="@string/stats_total_output_volume_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_transaction_fees_caption" />

        <TextView
            android:id="@+id/tv_estimated_transaction_volume_caption"
            style="@style/BaseText.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/stats_estimated_transaction_volume_caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_output_volume_caption" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
