<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_market_summary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_market_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_total_miners_revenue_dollar_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_total_miners_revenue_dollar_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_miners_revenue_dollar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_miners_revenue_dollar"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_miners_revenue_dollar_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_total_miners_revenue_dollar_title"
            app:layout_constraintTop_toTopOf="@+id/tv_total_miners_revenue_dollar_title"
            tools:text="$54,126,148.15" />

        <TextView
            android:id="@+id/tv_total_miners_revenue_bitcoin_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_total_miners_revenue_bitcoin_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_miners_revenue_bitcoin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_miners_revenue_dollar_title" />

        <TextView
            android:id="@+id/tv_total_miners_revenue_bitcoin"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_miners_revenue_bitcoin_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_total_miners_revenue_bitcoin_title"
            app:layout_constraintTop_toTopOf="@+id/tv_total_miners_revenue_bitcoin_title"
            tools:text="128,621.73092065 BTC" />

        <TextView
            android:id="@+id/tv_total_transaction_fees_caption"
            style="@style/BaseText.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/stats_total_miners_revenue_caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_miners_revenue_bitcoin_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
