<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_block_summary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_block_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_blocks_mined_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_blocks_mined_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_blocks_mined"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_blocks_mined"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_blocks_mined_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_blocks_mined_title"
            app:layout_constraintTop_toTopOf="@+id/tv_blocks_mined_title"
            tools:text="8" />

        <TextView
            android:id="@+id/tv_minutes_between_blocks_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_minutes_between_blocks_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_minutes_between_blocks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_blocks_mined_title" />

        <TextView
            android:id="@+id/tv_minutes_between_blocks"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_minutes_between_blocks_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_minutes_between_blocks_title"
            app:layout_constraintTop_toTopOf="@+id/tv_minutes_between_blocks_title"
            tools:text="6.38" />

        <TextView
            android:id="@+id/tv_bitcoins_mined_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_bitcions_mined_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_bitcoins_mined"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_minutes_between_blocks_title" />

        <TextView
            android:id="@+id/tv_bitcoins_mined"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bitcoins_mined_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_bitcoins_mined_title"
            app:layout_constraintTop_toTopOf="@+id/tv_bitcoins_mined_title"
            tools:text="16,406.53000000 BTC" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
