<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_market_summary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_market_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_market_price_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_market_price_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_market_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_market_price"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_market_price_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_market_price_title"
            app:layout_constraintTop_toTopOf="@+id/tv_market_price_title"
            tools:text="$51,006.63" />

        <TextView
            android:id="@+id/tv_trade_volume_dollar_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_trade_volume_dollar_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_trade_volume_dollar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_market_price_title" />

        <TextView
            android:id="@+id/tv_trade_volume_dollar"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trade_volume_dollar_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_trade_volume_dollar_title"
            app:layout_constraintTop_toTopOf="@+id/tv_trade_volume_dollar_title"
            tools:text="$836,764,858.67" />

        <TextView
            android:id="@+id/tv_trade_volume_bitcoin_title"
            style="@style/BaseText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/stats_trade_volume_bitcoin_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_trade_volume_bitcoin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trade_volume_dollar_title" />

        <TextView
            android:id="@+id/tv_trade_volume_bitcoin"
            style="@style/BaseText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trade_volume_bitcoin_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_trade_volume_bitcoin_title"
            app:layout_constraintTop_toTopOf="@+id/tv_trade_volume_bitcoin_title"
            tools:text="16,406.53000000 BTC" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
